fixed subtask input on smaller viewports

--- a/styles/taskstyle.css
+++ b/styles/taskstyle.css
@@ -742,8 +742,7 @@ li {
 
 @media (max-width: 400px) {
   .add-task-section form {
-    margin-left: 0;
-    align-items: center;
+    margin-left: 20px;
   }
 }
 
